Fixed search suggestions on mobile

--- a/wcfsetup/install/files/style/ui/dropdown.scss
+++ b/wcfsetup/install/files/style/ui/dropdown.scss
@@ -57,6 +57,13 @@
 
 .dropdownMenu {
 	@include dropdownMenu;
+	
+	@include screen-md-down {
+		&.dropdownMenuPageSearch {
+			left: 0 !important;
+			right: 0 !important;
+		}
+	}
 }
 
 .dropdownIndicator::after {
